# cmake_tutorial

./: CMakeLists.txt  main.cc  my_power.h
my_math/: CMakeLists.txt  my_power.cc
